[package]
name = "type-operators"
version = "0.1.3"
authors = ["Sean Leffler <sean@errno.com>"]

description = "A macro system for creating type operators in Rust and writing type-level logic."

documentation = "https://docs.rs/type-operators"
homepage = "https://github.com/sdleffler/type-operators-rs"
repository = "https://github.com/sdleffler/type-operators-rs"

readme = "README.md"

keywords = ["type", "type-level", "operator", "macro"]

license = "MIT/Apache-2.0"

[features]
default = []
specialization = []

nightly = ["specialization"]
